# handDetector

./: CMakeLists.txt  Filter.cpp  Filter.h  Finger.cpp  Finger.h  Hand.cpp  Hand.h  HandDetector.cpp  HandDetector.h  README.md  example.cpp  finger.hpp  hand.hpp  handDetector.hpp  start.sh  utils.cpp  utils.h  utils.hpp
